# fauxboy

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Options.cmake  PreventInSourceBuild.cmake
include/fauxboy/: address.hpp  bus.hpp  cpu.hpp  register.hpp  util.hpp
nix/: flake.nix
src/: bus.cpp  cpu.cpp
test/: CMakeLists.txt
test/include/: config.hpp
test/src/: main.cpp  single_step_tests.cpp  tests.cpp
